# discord-clone

./: package-lock.json  package.json
app/: package-lock.json  package.json
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  main.rs
app/src/components/: main.svelte  sign-in.svelte
app/src/lib/: store.ts
app/src/lib/stores/: ValidateStore.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/splashscreen/: +page.svelte
backend/: Cargo.toml  Dockerfile  db_table_commands  docker-compose.yml
backend/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/auth/: error.rs  jwt.rs  middleware.rs  routes.rs
backend/src/auth/routes/: login.rs  register.rs
backend/src/database/: mod.rs  prelude.rs  users.rs
src-tauri/: tauri.conf.json
src/routes/: +layout.svelte  +page.svelte
