[package]
name = "discord-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["default", "http1", "http2"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
libsql-client = "0.32.0"
pwhash = "1.0.0"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
once_cell = { version = "1.18.0", features = [] }
lazy_static = "1.4.0"